--- a/Esercitazioni_2/4_landing_page/index.html
+++ b/Esercitazioni_2/4_landing_page/index.html
@@ -19,8 +19,8 @@
     <nav>
         <div class="menu">
             <ul class="menu-list">
-                <li class="menu-item"><a href="#backend" class="menu-item">Backend</a></li>
-                <li class="menu-item"><a href="#frontend" class="menu-item">Frontend</a></li>
+                <li class="menu-item"><a href="#backend">Backend</a></li>
+                <li class="menu-item"><a href="#frontend">Frontend</a></li>
                 <li class="menu-item"><a href="#database">Database</a></li>
             </ul>
         </div>
@@ -57,7 +57,6 @@
 
         </div>
     <main>
-
 
     <script src="dist/app.js"></script>
 </body>
