--- a/Esercitazioni_2/4_landing_page/index.html
+++ b/Esercitazioni_2/4_landing_page/index.html
@@ -23,6 +23,8 @@
                 <li class="menu-item"><a href="#frontend">Frontend</a></li>
                 <li class="menu-item"><a href="#database">Database</a></li>
             </ul>
+
+            <a href="#form-section"><button>Contatti</button></a>
         </div>
     </nav>
 
@@ -56,7 +58,7 @@
             </div>
         </div>
 
-        <div class="form-section">
+        <div class="form-section" id="form-section">
             <div class="form-title">
                 <h2> Contatti </h2>
             </div>
