--- a/Esercitazioni_2/4_landing_page/index.html
+++ b/Esercitazioni_2/4_landing_page/index.html
@@ -8,6 +8,8 @@
 
     <link rel="icon" type="image/x-icon" href="assets/for-designers.svg">
 
+    <link href="https://css.gg/css" rel="stylesheet" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;800;900&display=swap" rel="stylesheet">
@@ -77,7 +79,7 @@
                         vendita del mio
                         primogenito, se e quando nascerà.</label>
                 </div>
-                <button>Invia</button>
+                <button><i class="gg-mail"></i>Invia</button>
             </form>
         </div>
     </main>
