--- a/Esercitazioni_2/4_landing_page/index.html
+++ b/Esercitazioni_2/4_landing_page/index.html
@@ -42,13 +42,19 @@
                     <h2>Backend development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>
+                    <div class="progress">
+                        <div class="progress-bar-1"></div>
+                    </div>
                 </div>
 
                 <div class="card" id="frontend">
                     <img src="./assets/for-designers.svg" alt="Frontend development">
                     <h2>Frontend development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
-                        reprehenderit molestias!</p>
+                        reprehenderit molestias!</p>                    
+                    <div class="progress">
+                        <div class="progress-bar-2"></div>
+                    </div>
                 </div>
 
                 <div class="card" id="database">
@@ -56,6 +62,9 @@
                     <h2>Database management</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>
+                    <div class="progress">
+                        <div class="progress-bar-3"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,7 +73,7 @@
             <div class="form-title">
                 <h2> Contatti </h2>
             </div>
-            <form action="/ciaone" method="POST">
+            <form action="#" method="POST" id="contact-form">
                 <div>
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name" required>
