--- a/Esercitazioni_2/4_landing_page/index.html
+++ b/Esercitazioni_2/4_landing_page/index.html
@@ -42,8 +42,8 @@
                     <h2>Backend development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>
-                    <div class="progress">
-                        <div class="progress-bar-1"></div>
+                    <div class="progress" data-value="80%">
+                        <div class="progress-bar progress-bar-1" data-value="80%"></div>
                     </div>
                 </div>
 
@@ -52,8 +52,8 @@
                     <h2>Frontend development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>                    
-                    <div class="progress">
-                        <div class="progress-bar-2"></div>
+                    <div class="progress" data-value="100%">
+                        <div class="progress-bar progress-bar-2" data-value="100%"></div>
                     </div>
                 </div>
 
@@ -62,8 +62,8 @@
                     <h2>Database management</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>
-                    <div class="progress">
-                        <div class="progress-bar-3"></div>
+                    <div class="progress" data-value="20%">
+                        <div class="progress-bar progress-bar-3"></div>
                     </div>
                 </div>
             </div>
