--- a/Esercitazioni_2/4_landing_page/index.html
+++ b/Esercitazioni_2/4_landing_page/index.html
@@ -43,7 +43,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>
                     <div class="progress" data-value="80%">
-                        <div class="progress-bar progress-bar-1" data-value="80%"></div>
+                        <div class="progress-bar progress-bar-1" style="--bar-filling-1: 80%"></div>
                     </div>
                 </div>
 
@@ -51,9 +51,9 @@
                     <img src="./assets/for-designers.svg" alt="Frontend development">
                     <h2>Frontend development</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
-                        reprehenderit molestias!</p>                    
+                        reprehenderit molestias!</p>
                     <div class="progress" data-value="100%">
-                        <div class="progress-bar progress-bar-2" data-value="100%"></div>
+                        <div class="progress-bar progress-bar-2" style="--bar-filling-2: 100%"></div>
                     </div>
                 </div>
 
@@ -63,7 +63,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aut eum et ratione obcaecati
                         reprehenderit molestias!</p>
                     <div class="progress" data-value="20%">
-                        <div class="progress-bar progress-bar-3"></div>
+                        <div class="progress-bar progress-bar-3" style="--bar-filling-3: 20%"></div>
                     </div>
                 </div>
             </div>
